@@ -14,21 +14,21 @@ Format of courses.xml
 	<course courseCode="4910">
 		<booking>
 			<day weekday="MON">Monday</day>
-			<timeslot start="15:30" end="16:20">15:30 to 16:20</timeslot>
+			<timeslot start="1530" end="16:20">15:30 to 16:20</timeslot>
 			<courseType>Lec</courseType>
 			<room>SW1-2005</room>
 			<instructor>Richard Chau</instructor>
 		</booking>
 		<booking>
 			<day weekday="THU">Thursday</day>
-			<timeslot start="09:30" end="10:20">09:30 to 10:20</timeslot>
+			<timeslot start="0930" end="10:20">09:30 to 10:20</timeslot>
 			<courseType>Lec</courseType>
 			<room>SW5-1840</room>
 			<instructor>Richard Chau</instructor>
 		</booking>
 		<booking>
 			<day weekday="THU">Thursday</day>
-			<timeslot start="15:30" end="16:20">15:30 to 6:20</timeslot>
+			<timeslot start="1530" end="16:20">15:30 to 6:20</timeslot>
 			<courseType>Lab</courseType>
 			<room>SE12-306</room>
 			<instructor>Richard Chau</instructor>
@@ -37,7 +37,7 @@ Format of courses.xml
 	<course courseCode="4660">
 		<booking>
 			<day weekday="FRI">Friday</day>
-			<timeslot start="08:30" end="10:20">08:30 to 10:20</timeslot>
+			<timeslot start="0830" end="10:20">08:30 to 10:20</timeslot>
 			<courseType>Lec</courseType>
 			<room>SW9-206</room>
 			<instructor>Steve Fabiszewski</instructor>
@@ -53,7 +53,7 @@ Format of courses.xml
 	<course courseCode="4770">
 		<booking>
 			<day weekday="FRI">Friday</day>
-			<timeslot start="10:30" end="12:20">10:30 to 12:20</timeslot>
+			<timeslot start="1030" end="12:20">10:30 to 12:20</timeslot>
 			<courseType>Lab</courseType>
 			<room>SE12-306</room>
 			<instructor>Trevor Lord</instructor>
@@ -62,21 +62,21 @@ Format of courses.xml
 	<course courseCode="4650">
 		<booking>
 			<day weekday="MON">Monday</day>
-			<timeslot start="10:30" end="12:20">10:30 to 12:20</timeslot>
+			<timeslot start="1030" end="12:20">10:30 to 12:20</timeslot>
 			<courseType>Lab</courseType>
 			<room>SE12-306</room>
 			<instructor>Medhat Elmasry</instructor>
 		</booking>
 		<booking>
 			<day weekday="MON">Monday</day>
-			<timeslot start="16:30" end="17:20">16:30 to 17:20</timeslot>
+			<timeslot start="1630" end="17:20">16:30 to 17:20</timeslot>
 			<courseType>Lec</courseType>
 			<room>SE6-205</room>
 			<instructor>Medhat Elmasry</instructor>
 		</booking>
 		<booking>
 			<day weekday="TUE">Tuesday</day>
-			<timeslot start="12:30" end="13:20">12:30 to 13:20</timeslot>
+			<timeslot start="1230" end="13:20">12:30 to 13:20</timeslot>
 			<courseType>Lec</courseType>
 			<room>SE6-205</room>
 			<instructor>Medhat Elmasry</instructor>
@@ -85,14 +85,14 @@ Format of courses.xml
 	<course courseCode="4620">
 		<booking>
 			<day weekday="TUE">Tuesday</day>
-			<timeslot start="08:30" end="10:20">08:30 to 10:20</timeslot>
+			<timeslot start="0830" end="10:20">08:30 to 10:20</timeslot>
 			<courseType>Lab</courseType>
 			<room>SE12-306</room>
 			<instructor>Bethany Edmunds</instructor>
 		</booking>
 		<booking>
 			<day weekday="TUE">Tuesday</day>
-			<timeslot start="15:30" end="17:20">15:30 to 17:20</timeslot>
+			<timeslot start="1530" end="17:20">15:30 to 17:20</timeslot>
 			<courseType>Lec</courseType>
 			<room>SW1-2020</room>
 			<instructor>Bethany Edmunds</instructor>
@@ -101,14 +101,14 @@ Format of courses.xml
 	<course courseCode="4850">
 		<booking>
 			<day weekday="WED">Wednesday</day>
-			<timeslot start="12:30" end="14:20">12:30 to 14:20</timeslot>
+			<timeslot start="1230" end="14:20">12:30 to 14:20</timeslot>
 			<courseType>Lec</courseType>
 			<room>SE6-207</room>
 			<instructor>James Parry</instructor>
 		</booking>
 		<booking>
 			<day weekday="THU">Thursday</day>
-			<timeslot start="13:30" end="15:20">13:30 to 15:20</timeslot>
+			<timeslot start="1330" end="15:20">13:30 to 15:20</timeslot>
 			<courseType>Lab</courseType>
 			<room>SE12-308</room>
 			<instructor>James Parry</instructor>
