@@ -15,7 +15,7 @@ Format of timeslots.xml
 -->
 
 <timeslots>
-	<timeslot start="08:30" end="10:20">
+	<timeslot start="0830" end="10:20">
 		<booking>
 			<day weekday="TUE">Tuesday</day>
 			<courseCode>4620</courseCode>
@@ -31,7 +31,7 @@ Format of timeslots.xml
 			<instructor>Steve Fabiszewski</instructor>
 		</booking>
 	</timeslot>
-	<timeslot start="09:30" end="10:20">
+	<timeslot start="0930" end="10:20">
 		<booking>
 			<day weekday="THU">Thursday</day>
 			<courseCode>4910</courseCode>
@@ -40,7 +40,7 @@ Format of timeslots.xml
 			<instructor>Richard Chau</instructor>
 		</booking>
 	</timeslot>
-	<timeslot start="10:30" end="12:20">
+	<timeslot start="1030" end="12:20">
 		<booking>
 			<day weekday="MON">Monday</day>
 			<courseCode>4650</courseCode>
@@ -63,7 +63,7 @@ Format of timeslots.xml
 			<instructor>Trevor Lord</instructor>
 		</booking>
 	</timeslot>
-	<timeslot start="12:30" end="13:20">
+	<timeslot start="1230" end="13:20">
 		<booking>
 			<day weekday="TUE">Tuesday</day>
 			<courseCode>4650</courseCode>
@@ -72,7 +72,7 @@ Format of timeslots.xml
 			<instructor>Medhat Elmasry</instructor>
 		</booking>
 	</timeslot>
-	<timeslot start="12:30" end="14:20">
+	<timeslot start="1230" end="14:20">
 		<booking>
 			<day weekday="WED">Wednesday</day>
 			<courseCode>4850</courseCode>
@@ -81,7 +81,7 @@ Format of timeslots.xml
 			<instructor>James Parry</instructor>
 		</booking>
 	</timeslot>
-	<timeslot start="13:30" end="15:20">
+	<timeslot start="1330" end="15:20">
 		<booking>
 			<day weekday="THU">Thursday</day>
 			<courseCode>4850</courseCode>
@@ -97,7 +97,7 @@ Format of timeslots.xml
 			<instructor>Steve Fabiszewski</instructor>
 		</booking>
 	</timeslot>
-	<timeslot start="15:30" end="16:20">
+	<timeslot start="1530" end="16:20">
 		<booking>
 			<day weekday="MON">Monday</day>
 			<courseCode>4910</courseCode>
@@ -106,7 +106,7 @@ Format of timeslots.xml
 			<instructor>Richard Chau</instructor>
 		</booking>
 	</timeslot>
-	<timeslot start="16:30" end="17:20">
+	<timeslot start="1630" end="17:20">
 		<booking>
 			<day weekday="MON">Monday</day>
 			<courseCode>4650</courseCode>
@@ -115,7 +115,7 @@ Format of timeslots.xml
 			<instructor>Medhat Elmasry</instructor>
 		</booking>
 	</timeslot>
-	<timeslot start="15:30" end="17:20">
+	<timeslot start="1530" end="17:20">
 		<booking>
 			<day weekday="TUE">Tuesday</day>
 			<courseCode>4620</courseCode>
